tests/ui/issues/issue-8761.stderr
error[E0308]: mismatched types
  --> $DIR/issue-8761.rs:2:9
   |
LL |     A = 1i64,
   |         ^^^^ expected `isize`, found `i64`
   |
help: change the type of the numeric literal from `i64` to `isize`
   |
LL |     A = 1isize,
   |          ~~~~~

error[E0308]: mismatched types
  --> $DIR/issue-8761.rs:5:9
   |
LL |     B = 2u8
   |         ^^^ expected `isize`, found `u8`
   |
help: change the type of the numeric literal from `u8` to `isize`
   |
LL |     B = 2isize
   |          ~~~~~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
